--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,3 @@
-<!doctype html>
-
 <html ng-app="todo">
 <head>
 	<meta charset="utf-8">
@@ -63,6 +61,11 @@
 			</form>
 			
 		</div>
+	</div>
+
+	<div class="col-sm-8 col-sm-offset-2 text-center">	
+		<iframe src="http://ghbtns.com/github-btn.html?user=steelfan555&repo=node-todo&type=fork"
+	  		allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20"></iframe>
 	</div>
 
 </body>
